hphp/hack/test/typecheck/foreach_vector.php.exp
File "foreach_vector.php", line 21, characters 10-13:
Typing error (Typing[4110])
  File "foreach_vector.php", line 21, characters 10-17:
  Expected `num` because this is used in an arithmetic operation
  File "foreach_vector.php", line 18, characters 19-21:
  But got `Foo`
  File "collections/Vector.hhi", line 46, characters 71-72:
    via this generic `Tv`
  File "collections/interfaces.hhi", line 549, characters 70-71:
    via this generic `Tv`
  File "collections/interfaces.hhi", line 293, characters 56-57:
    via this generic `Tv`
  File "interfaces.hhi", line 110, characters 66-67:
    via this generic `Tv`
  File "interfaces.hhi", line 92, characters 46-47:
    via this generic `Tv`
